--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "databaseh": "heroku pg:psql -a anytimefitnesslambda",
     "seedh": "heroku run knex seed:run -a anytimefitnesslambda",
     "test": "cross-env NODE_ENV=testing jest --watchAll --verbose --runInBand",
-    "deploy": "git push heroku main"
+    "deploy": "git push heroku main",
+    "resetdb": "npm run rollback && npm run migrate && npm run seed"
   },
   "engines": {
     "node": "14.16.0",
